# gen3datamodel

./: .secrets.baseline  .travis.yml  MANIFEST.in  NOTICE  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml
docs/: README.md
examples/: jupyter_example.ipynb
gdcdatamodel/: gdc_postgres_admin.py
gdcdatamodel/models/: __init__.py  submission.py
gdcdatamodel/validators/: graph_validators.py  json_validators.py  link_validator_parser.py
gdcdictionary/schemas/: _definitions.yaml  _terms.yaml  aggregated_somatic_mutation.yaml  aligned_reads_index.yaml  annotated_somatic_mutation.yaml  annotation.yaml  archive.yaml  copy_number_estimate.yaml  filtered_copy_number_segment.yaml  genomic_profile_harmonization_workflow.yaml  masked_somatic_mutation.yaml  methylation_array_harmonization_workflow.yaml  methylation_beta_value.yaml  protein_expression.yaml  publication.yaml  simple_somatic_mutation.yaml  somatic_copy_number_workflow.yaml  somatic_mutation_index.yaml  structural_variant_calling_workflow.yaml  submitted_genotyping_array.yaml  submitted_unaligned_reads.yaml
gen3datamodel/: __init__.py  gdc_postgres_admin.py
gen3datamodel/models/: __init__.py  indexes.py  submission.py
gen3datamodel/validators/: graph_validators.py  json_validators.py
migrations/: index_secondary_keys.py  notifications.py  set_null_edge_columns.py  update_case_cache.py  update_case_cache_append_only.py  update_legacy_states.py
test/: ci_commands_script.sh  ci_setup.sh  conftest.py  test_datamodel.py  test_gdc_postgres_admin.py  test_indexes.py  test_validators.py  test_versioned_nodes.py
