[tool.poetry]
name = "gen3datamodel"
homepage = "https://gen3.org/"
version = "3.2.1"
description = ""
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
repository = "https://github.com/uc-cdis/gen3datamodel"

[tool.poetry.dependencies]
python = "^3.9"
cdislogging = "*"
dictionaryutils = {git = "https://github.com/uc-cdis/dictionaryutils", branch = "chore/update-jsonschema"}
# set 'develop = true' to prevent over-writing by 'gen3dictionary', similar to
# https://github.com/uc-cdis/gen3datamodel/blob/190f99885c660a2971ec64522168548e19bea512/Pipfile#L16
gdcdictionary = {git = "https://github.com/NCI-GDC/gdcdictionary.git", rev = "release/py3", develop = true}
jsonschema = "*"
pyrsistent = "==0.15.4"
pytz = "*"
psqlgraph = "~=3.0"
psycopg2-binary = "~=2.8.2"
sqlalchemy = "==1.3.3"
strict-rfc3339 = "==0.7"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "^2.5.1"
mock = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv"
testpaths = [
    "tests",
]
